# JG

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Libraries.cmake  ProjectList.cmake  posizioni_apc
CMake/: FindCuda.cmake  FindEigen.cmake  FindFREEIMAGE.cmake  FindLeap.cmake  Findassimp.cmake  FindeORL.cmake
Documents/: Abstract.md
Extra/: ShapesIntersections.fcstd  Simple_mesh.blend  Simple_mesh.mtl  Transparency.blend  Transparency.mtl  Transparency.xcf  camera_data.yml  camera_data_extr.yml  camera_data_int.yml  cylinder.yml  global_config.yml  pre-commit
Misc/: CMakeLists.txt  posizioni_apc  robot.data
Misc/DemoC5GOpen/: CMakeLists.txt  demo_c5gopen.c  demo_c5gopen.h  joystick.h  keyboard.h  loopConsole.c  test_crcopen_util.c  user_callback.c
Misc/Linemod/: CMakeLists.txt  Test_renderer.cpp  linemod_train.cpp
Misc/Models/: shelf.blend
Misc/OpenCVCalib/: CMakeLists.txt  calibExtr.cpp  calib_xml_from_folder.sh  calibration.cpp  mergeCalibration.cpp
Misc/OpenCV_RGBD/: CMakeLists.txt  depth_cleaner.cpp  depth_to_3d.cpp  depth_to_3d.h  normal.cpp  normal_lut.i  odometry.cpp  plane.cpp  precomp.hpp  utils.cpp  utils.h
Misc/OpenNITest/: CMakeLists.txt  OpenniProvider.cpp
Misc/OpenNI_Streaming_pleasedontlookatme/: CMakeLists.txt  main.cpp
Misc/OpenNI_save_images/: CMakeLists.txt  main.cpp
Misc/Sandbox/: executeGrasp.cpp
Misc/Sandbox/GiorgioT/: hand_detector_depth_image.cpp
Misc/Sandbox/GiorgioT/MyLinemodPlusRender/: CMakeLists.txt
Misc/Sandbox/GiorgioT/MyLinemodPlusRender/src/: MyLinemod_detect.cpp  db_linemod.h  linemod_icp.cpp  linemod_train.cpp  model.cpp  renderer3d.cpp  renderer3d_impl_glut.cpp  renderer3d_impl_glut.h  utils.cpp  utils.h
Misc/Sandbox/TCPtest/: CMakeLists.txt  main.cpp
Misc/Sandbox/provamain/: APC.cpp  CMakeLists.txt  ScanBins.cpp  main.cpp
Misc/Sandbox/provamain/pyModule/: CMakeLists.txt  mainModule.cpp
Misc/Sandbox/testABRT/: CMakeLists.txt  main.cpp
Misc/Sandbox/testABRT/pyModule/: CMakeLists.txt
Misc/Taratura_shelf/: CMakeLists.txt  taratura.cpp  taratura_griglia.cpp  taratura_posizioni.cpp
Misc/Test_C5G/: CMakeLists.txt  test_c5g.cpp
Misc/Test_Giorgio/: CMakeLists.txt  TestGiorgio.cpp  test_performance_giorgio.cpp
Misc/Test_OpenCV/: CMakeLists.txt  test_downsample.cpp  test_erode.cpp  test_flatten_matrix.cpp
Misc/Test_condition_variables/: CMakeLists.txt  TestCV.cpp
Misc/Test_covariance/: CMakeLists.txt  test_covariance.cpp
Misc/Test_depth/: CMakeLists.txt  capture_frame.cpp  showCamera.cpp  test_depth.cpp  test_xyz.cpp
Misc/Test_grasp/: CMakeLists.txt  test_grasp_generation.cpp  test_multiple_grasps.cpp  test_single_grasp.cpp  test_single_grasp_moving.cpp
Misc/Test_models/: CMakeLists.txt  test_model_cloud.cpp  test_model_pcl.cpp  test_render_model.cpp
Misc/Test_registration/: CMakeLists.txt  test_registration.cpp
Misc/Test_renderer/: CMakeLists.txt  Test_renderer.cpp  test_renderer_transformations.cpp
Misc/Test_scanBins/: CMakeLists.txt  test_scanbins.cpp
Misc/Test_shapes/: CMakeLists.txt  test_save_shape.cpp  test_shape_approximation.cpp  test_shape_intersections.cpp  test_show_shape.cpp
Misc/Test_spheresplitter/: CMakeLists.txt  test_spheresplitter.cpp
Misc/Test_storage/: CMakeLists.txt  test_storage_camera_model.cpp
Misc/Test_uvz2pcl/: CMakeLists.txt  test_uvz2pcl.cpp  test_uvzrender.cpp  test_uvzrender_point.cpp
Misc/leap/: CMakeLists.txt  README.md  leaplistener.cpp  leaplistener.h  main.cpp
hook/: pre-commit
include/APC/: APC.h  Grasper.h  Order.h  OrderBin.h  ReadWorkOrder.h  Robot.h  ScanBins.h  Shelf.h  UpdateBins.h
include/C5G/: C5G.h  C5G_socket.h  Grasp.h  Pose.h  eORL.h  userCallback.h
include/Camera/: CameraModel.h  CameraView.h  ClickIndexTaker.h  Cutter.h  DummyConsumer.h  DummyProvider.h  FileProvider.h  FileProviderAuto.h  GLUTInit.h  GiorgioUtils.h  Image.h  ImageConsumer.h  ImageProvider.h  ImageViewer.h  ImageWMask.h  IndexTaker.h  LeapCamera.h  LeapListener.h  Openni1Provider.h  Openni2Provider.h  OpenniProvider.h  OpenniStreamProvider.h  OpenniWaitProvider.h  Recognition.h  RecognitionData.h  UpdateGiorgio.h  WaitProvider.h  cvni2.h  db_linemod.h
include/Gripper/: ComposedShape.h  Cuboid.h  Cylinder.h  GraspPose.h  Grasper.h  Grip.h  Gripper.h  GripperModel.h  Object.h  PoseFactory.h  Shape.h  ShapeBuilder.h  Sphere.h  Types.h
include/Img/: Image.h  ImageWMask.h
parser/: CMakeLists.txt  parser.py  setup.py
parser/src/: ipc.cpp
src/: CMakeLists.txt
src/APC/: APC.cpp  CMakeLists.txt  Grasper.cpp  Order.cpp  OrderBin.cpp  ReadWorkOrder.cpp  Robot.cpp  ScanBins.cpp  Shelf.cpp  UpdateBins.cpp  dovesonoglioggetti
src/C5G/: C5G.cpp  C5G_dummy.cpp  C5G_eORL.cpp  C5G_socket.cpp  CMakeLists.txt  Pose.cpp  joystick.c  keyboard.c  loopConsole.c  userCallback.c  user_callback.c
src/Camera/: CMakeLists.txt  CMakeLists.txt.orig  CameraModel.cpp  CameraView.cpp  ClickIndexTaker.cpp  Cutter.cpp  DummyConsumer.cpp  DummyProvider.cpp  FileProvider.cpp  FileProviderAuto.cpp  GLUTInit.cpp  GiorgioUtils.cpp  Image.cpp  ImageConsumer.cpp  ImageProvider.cpp  ImageViewer.cpp  ImageWMask.cpp  IndexTaker.cpp  Openni1Provider.cpp  Openni2Provider.cpp  OpenniProvider.cpp  OpenniStreamProvider.cpp  OpenniWaitProvider.cpp  Recognition.cpp  RecognitionData.cpp  Renderer3d.cpp  UpdateGiorgio.cpp  linemod_icp.cpp  model.cpp  renderer3d_impl_glut.cpp
src/Camera/Leap/: CMakeLists.txt  LeapCamera.cpp
src/Gripper/: CMakeLists.txt  ComposedShape.cpp  Cuboid.cpp  Cylinder.cpp  GraspPose.cpp  Grasper.cpp  GripperModel.cpp  Object.cpp  PoseFactory.cpp  Shape.cpp  ShapeBuilder.cpp  Sphere.cpp  gripper.py  transformations.c
src/Parser/: CMakeLists.txt  RobotData.cpp  parser.py  pyRobotData.cpp
src/Parser/data/: sample.json
src/Parser/src/: ipc.cpp  ipc.h
src/Recognition/: CMakeLists.txt  ColorGradientPyramidFull.cpp  DetectorWMasks.cpp  GLUTInit.cpp  GiorgioUtils.cpp  Mesh.cpp  Model.cpp  PointMesh.cpp  Recognition.cpp  RecognitionData.cpp  Renderer3d.cpp  SphereSplitter.cpp  Utils.cpp  linemod_icp.cpp  model.cpp  renderer3d_impl_glut.cpp
(+45 files in other folders)
