add_executable(test_shape_intersections test_shape_intersections.cpp)
add_executable(test_shape_approximation test_shape_approximation.cpp)
add_executable(test_show_shape test_show_shape.cpp)
add_executable(test_save_shape test_save_shape.cpp)

target_link_libraries(test_shape_intersections shapes)
target_link_libraries(test_shape_approximation shapes ${PCL_LIBRARIES})
target_link_libraries(test_show_shape shapes ${PCL_LIBRARIES})
target_link_libraries(test_save_shape shapes ${PCL_LIBRARIES})
