FIND_PACKAGE(PythonInterp 2 REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
PYTHON_ADD_MODULE(_transformations transformations.c )

CONFIGURE_FILE(gripper.py ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} COPYONLY)
CONFIGURE_FILE(transformations.py ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} COPYONLY)
