FIND_PACKAGE(PythonInterp 2 REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
FIND_PACKAGE(Eigen REQUIRED)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Boost COMPONENTS python system REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ${Eigen_INCLUDE_DIRS})

ADD_LIBRARY(robotdata SHARED RobotData.cpp)
TARGET_LINK_LIBRARIES(robotdata camera workorder)
SET_TARGET_PROPERTIES(robotdata PROPERTIES COMPILE_FLAGS "-fPIC")

PYTHON_ADD_MODULE(apcRobot pyRobotData.cpp)
TARGET_LINK_LIBRARIES(apcRobot camera robotdata ${OpenCV_LIBRARIES} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} c5g c5g_misc) 

COPY_TO_LIB(parser.py)
