FIND_PACKAGE(PythonInterp REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
FIND_PACKAGE(Boost COMPONENTS python3 system thread REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})

PYTHON_ADD_MODULE(pyAPC ../APC.cpp ../main.cpp mainModule.cpp)

TARGET_LINK_LIBRARIES(pyAPC ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} robotdata camera c5g c5g_misc) 
